--- a/src/components/Checkout.css
+++ b/src/components/Checkout.css
@@ -1,15 +1,27 @@
-.checkout{
-    display:flex;
-    padding : 20px;
-    background-color: white;
-    height: max-content;
+.checkout {
+  display: flex;
+  padding: 20px;
+  background-color: #eaeded !important;
+  height: max-content;
 }
-.checkout__ad{
-    width: 100%;
-    margin-bottom:10px;
+.checkout__left__belowImage {
+  background: white;
+  padding: 15px;
 }
-.checkout__title{
-    margin-right:10px;
-    padding: 10px;
-    border-bottom: 1px solid lightgray;
+.checkout__ad {
+  width: 100%;
+  margin-bottom: 10px;
 }
+.checkout__title {
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding: 15px;
+  border-bottom: 2px solid gray;
+}
+.checkout__left__belowImage > h3 {
+  text-align: center;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding: 15px;
+}
+
