--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -10,6 +10,11 @@
   min-width: 100px;
   background-color: white;
   z-index: 1;
+  transition: transform 500ms ease;
+}
+.product:hover{
+  transform: scale(1.05);
+
 }
 .product > img {
   max-height: 200px;
