--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,20 +1,21 @@
 .home {
-  display: flex;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1500px;
+  display: flex !important;
+  justify-content: center !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  max-width: 1500px !important;
 }
 .home__row {
-  display: flex;
-  z-index: 1;
-  margin-left: 5px;
-  margin-right: 5px;
+  display: flex !important;
+  z-index: 1 !important;
+  margin-left: 5px !important;
+  margin-right: 5px !important;
 }
 .home__image {
-  width: 100%;
-  z-index: 1;
-  margin-bottom: -150px;
-  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  width: 100% !important;
+  z-index: 1 !important;
+  margin-bottom: -150px !important;
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)) !important;
 }
+
 
